--- a/modules/ROOT/pages/deployment/services/s-list/graph.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/graph.adoc
@@ -113,7 +113,7 @@ The client that is used to authenticate with Keycloak has to be able to list use
 
 Note that these roles are only available to assign if the client is in the `master` realm.
 
-
+// include common translations text
 :envvar_name: GRAPH_TRANSLATION_PATH
 include::partial$deployment/services/translations.adoc[]
 
@@ -122,7 +122,8 @@ include::partial$deployment/services/translations.adoc[]
 // renders dependent on is_cache or is_store
 :is_cache: true
 
-include::partial$multi-location/cache-store.adoc[]
+// get the complete .adoc page but do not render any contained tag directive when found in the middle
+include::partial$multi-location/cache-store.adoc[tag=**]
 
 == Event Bus Configuration
 
