--- a/modules/ROOT/pages/migration/upgrading-ocis.adoc
+++ b/modules/ROOT/pages/migration/upgrading-ocis.adoc
@@ -23,11 +23,13 @@ IMPORTANT: When upgrading from an older release to the desired one, mandatory co
 
 === Notable Changes Requiring Manual Intervention
 
-* lets see what will come here
+* Resharing has finally been removed.
+* The maintenance command `ocis storage-users uploads list` has been removed.
 
 === Breaking Changes Requiring Manual Intervention
 
 * All environment variables that were marked for deprecation in Infinite Scale release 5.0.x have finally been removed.
+* A new mandatory Infinite Scale config setting for the `activitylog` service named `service_account` has been added. If not adding this config, `activities` will not get handled.
 
 === Upgrade Steps
 
